[tool.poetry]
name = "pyshqg"
version = "0.1.0"
description = "QG Model in spherical harmonics"
authors = ["Alban Farchi <alban.farchi@enpc.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.2"
pyshtools = "^4.10.4"
scipy = "^1.11.4"
xarray = "^2023.11.0"
dask = "^2023.12.0"
distributed = "^2023.12.0"
zarr = "^2.16.1"
conda-lock = "^2.5.1"
tqdm = "^4.66.1"
netcdf4 = "^1.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
m2r2 = "^0.3.3.post2"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
