[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshqg"
version = "0.1.0"
description = "QG Model in spherical harmonics"
license = {text = "MIT"}
authors = [
    {name = "Alban Farchi", email="alban.farchi@enpc.fr"},
    {name = "Marc Bocquet", email="marc.bocquet@enpc.fr"},
    {name = "Quentin Malartic", email="quentin.malartic@enpc.fr"},
    {name = "Fabio D'Andrea", email="fabio.dandrea@lmd.ipsl.fr"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pyshtools==4.10.4",
    "xarray",
    "zarr",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyterlab",
    "ipywidgets",
    "matplotlib",
    "cartopy",
    "cmocean",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "sphinx-gallery",
    "tomli",
    "m2r2",
    "ipython",
]
complete = ["pyshqg[dev,doc]"]

[tool.setuptools]
packages = ["pyshqg"]
